--- a/apps/frontend/Pages/Shared/Components/Merchant/Variants/CreatedVariants.razor
+++ b/apps/frontend/Pages/Shared/Components/Merchant/Variants/CreatedVariants.razor
@@ -15,8 +15,8 @@
     </div>
   }
 
-  <button class="mt-6 text-primary underline" @onclick="OnResetAll">
-    Create another product
+  <button class="mt-6 text-secondary underline" @onclick="OnResetAll">
+    Create another variant
   </button>
 </div>
 
